@@ -1,3 +1,7 @@
+2022-01-23  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* libpoke/pkl-env.c (_decl): Allow re-registering types.
+
 2022-01-24  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* poke/pk-table.pk: New field `indent'.
